base/cis_policies_v1.10.0/constraints/cis-requiredlabels-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: cake-require-labels
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  enforcementAction: dryrun
  match:
    kinds:
      - apiGroups: ["*"]
        kinds: ["Deployment", "StatefulSet"]
  parameters:
    labels: ["team", "org"]
